@@ -1,5 +1,8 @@
 *** CHANGELOG ***
 
+2019-06-11
+On Windows, sort folder contents with shlwapi::StrCmpLogicalW(...)
+
 2019-05-14
 Window will no longer maximize on initial image load
 Initial support for directory traversal
